--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "name": "gatsby-theme-bulma-blog",
-  "version": "1.0.0-alpha.1",
+  "author": "Jacob Bolda <me@jacobbolda.com>",
+  "version": "1.0.0-alpha.2",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src --out-dir . --ignore __tests__",
+    "prepublish": "cross-env NODE_ENV=production npm run build",
+    "watch": "babel -w src --out-dir . --ignore __tests__"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jbolda/gatsby-theme-bulma-blog.git"
   },
-  "keywords": ["gatsby","theme"],
-  "author": "Jacob Bolda <me@jacobbolda.com>",
+  "keywords": [
+    "gatsby",
+    "theme"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jbolda/gatsby-theme-bulma-blog/issues"
   },
-  "homepage": "https://github.com/jbolda/gatsby-theme-bulma-blog#readme"
+  "homepage": "https://github.com/jbolda/gatsby-theme-bulma-blog#readme",
+  "dependencies": {
+
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
+    "cross-env": "^5.0.5"
+  }
 }
