--- a/package.json
+++ b/package.json
@@ -21,16 +21,14 @@
     "url": "https://github.com/jbolda/gatsby-theme-bulma-blog/issues"
   },
   "homepage": "https://github.com/jbolda/gatsby-theme-bulma-blog#readme",
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.26.0",
     "cross-env": "^5.0.5"
   }
 }
